--- a/Maths/Maths.vcxproj.filters
+++ b/Maths/Maths.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="MathFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
