--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -130,10 +130,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="StringUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Exceptions.cpp" />
     <ClCompile Include="Memory.cpp" />
     <ClCompile Include="StringUtils.cpp" />
   </ItemGroup>
